ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kfirs-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kfirs-app
                port:
                  number: 30000
